fix: correct rule priority order, absent-input semantics, and bulk isolation
Three independent evaluation defects, each with a regression test that fails
on the previous behaviour.

Priority ordering selected the lowest-priority matching rule. The compiler
wrote rows to the artifact already sorted into evaluation order and *also*
stored the source-row permutation in the rule-order section, which the loader
then applied as physical row indices - so the ordering was applied twice. The
rule-order section now stores the identity permutation over physical rows,
which is what the loader has always assumed it holds.

An absent input field was coerced to the null/zero code and compared as if
the caller had supplied it, so an empty input satisfied conditions such as
"COUNT EQ 0", "ACTIVE EQ FALSE", "AGE GT -5" and "REGION NOT IN (APAC,EMEA)".
Presence is now carried alongside the coerced code, because the coerced domain
cannot express it: an omitted field and a supplied-but-unknown string both map
to NULL_ID, yet only the latter may satisfy a condition. A non-blank condition
against an absent input now fails for every operator, negative operators
included; blank cells still match, and supplied-but-unknown values still
satisfy NE and NOT_IN as before. On the indexed path this needs its own
candidate set, so ColumnIndex gains candidatesForAbsentInput(), returning only
the blank-cell rows.

Bulk evaluation looped over the throwing single-eval entry point, so a single
unmatched variant discarded the results of the whole batch. Evaluation is now
split into a row-lookup that returns -1 for no match and an output builder;
single-eval throws as before, bulk records an empty result for that variant and
continues. BulkResult keeps positional alignment and gains result(int),
matched(int), size(), matchedCount() and unmatchedIndices(); results() may now
contain nulls, which is documented on the class.

Findings and reproductions are recorded in docs/review/engine-design-review.md
(secti